重复注册校验逻辑模块 Md5工具类进行注册密码加解密 用户登录模块，利用加解密码的调用进行访问
